css/style.css
/* fonts */
@font-face {
    font-family: CAMPUS;
    src: url(../fonts/CollegiateFLF.ttf);
}

@font-face {
    font-family: Bebas;
    src: url(../fonts/Bebas-Regular.ttf);
}

@font-face {
    font-family: Louis George Cafe;
    src: url(../fonts/LouisGeorgeCafe.ttf);
}

h2 {
    font-family: Bebas;
}

.header_pages_logo span {
    font-family: CAMPUS;
    font-size: 30px;
    cursor: pointer;
}

/* reset */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: Louis George Cafe;
}

/* variables */
:root {
    --main-color: #eee;
    --secound-color: #777;
    --success: #22bb33;
    --fail: #bb2124;
}

/* page style */
body {
    width: 100%;
    display: flex;
    justify-content: center;
}

.contanier {
    flex: 0.6;
}

/* start header */
header {
    padding: 10px;
    background-color: var(--main-color);
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
}

.header_pages {
    display: flex;
}

.header_pages ul {
    list-style-type: none;
    display: flex;
    align-items: center;
    gap: 10px;
    margin-left: 10px;
}

.page-active{
    color: #000000;
    font-weight: bold;
}

.header_pages ul a {
    text-decoration: none;
    color: #000000a6;
}

.header_user {
    display: flex;
    align-items: center;
}

.header_user img,
.main_posts_post_head img {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: 2px solid var(--secound-color);
}

.avatar-active{
    display: none;
}

.header_user span{
    font-size: 20px;
    margin: 0 5px;
}

.header_user button {
    line-height: 1.5rem;
    padding: 0 5px;
    border: 2px solid var(--success);
    cursor: pointer;
    margin-left: 5px;
}
.header_user .sign-hidden{
    display: none;
}
.logout-hidden{
    display: none;
}
#logout{
    border: 2px solid var(--fail);
}
.header_user button:hover {
    background-color: var(--success);
    color: white;
}
.header_user #logout:hover {
    background-color: var(--fail);
    color: white;
}

/* end header */
/* start main */
main {
    margin-top: 20px;
}

.main_posts_post {
    box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
    margin-bottom: 30px;
    position: relative;
}

.main_posts_post_head {
    display: flex;
    align-items: center;
    padding: 10px;
    border-bottom: 1px solid var(--secound-color);
}

.main_posts_post_head_left {
    display: flex;
    align-items: center;
    cursor: pointer;
}

.main_posts_post_head_right{
    position: absolute;
    right: 15px;
}

.main_posts_post_head_editBtn{
    padding: 5px 10px;
    font-size: 19px;
    background-color: var(--secound-color);
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 4px;
}
.main_posts_post_head_deleteBtn{
    padding: 5px 10px;
    font-size: 19px;
    background-color: transparent;
    color: var(--fail);
    border: 1px solid var(--fail);
    cursor: pointer;
    border-radius: 4px;
}
.main_posts_post_head_deleteBtn:hover{
    background-color: var(--fail);
    color: white;
}

.main_posts_post_head h2 {
    margin-left: 10px;
}

.main_posts_post_img {
    margin-top: 10px;
    display: flex;
    flex-direction: column;
}

.main_posts_post_img img {
    width: 100%;
    height: 250px;
    object-fit: fill;
    border-radius: 5px;
}

.main_posts_post_img span {
    margin-top: 5px;
    padding: 10px;
}

.main_posts_post_content {
    margin: 10px 0;
    padding: 10px;
}

.main_posts_post_content p {
    margin-top: 3px;
}

.main_posts_post_comments {
    display: flex;
    align-items: center;
    border-top: 1px solid var(--secound-color);
    line-height: 1.5rem;
    padding: 10px;
    cursor: pointer;
}

.main_posts_post_comments i {
    opacity: .7;
    font-size: 16px;
    margin-right: 3px;
}

.main_posts_post_img span,
.main_posts_post_content p,
.main_posts_post_comments p,
.main_posts_post_comments span {
    opacity: .7;
}

.main_posts_post_comments b{
    background: var(--secound-color);
    padding: 10px;
    border-radius: 5px;
    margin-left: 10px;
}
/* end main */
/* start modal */
.modal {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.7s;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 300;
    background: rgba(0, 0, 0, 0.8);
}

.box {
    width: 50%;
    transform: translateY(-1000px);
    transition: all 2s;
    margin: auto;
    background: #fff;

}

/* #logBox{
    height: 375px;
}
#regBox{
    height: 570x;
}
#createBox{
    height: 500px;
} */

.bx {
    position: relative;
    padding: 65px 32px 0 32px;
}

.bx h3 {
    margin-bottom: 16px;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 20px;
}

.form input {
    width: 100%;
    height: 52px;
    padding: 15px;
    margin-bottom: 25px;
    font-size: 25px;
}

.form input[type="submit"] {
    background: var(--secound-color);
    font-size: 25px;
    text-transform: uppercase;
    line-height: 20px;
    color: #fff;
    cursor: pointer;
    border: none;
    border-radius: 5px;
}

#deleteSubmit{
    background-color: var(--fail);
}

.form input[type="file"]{
    padding: 0;
    font-size: 2rem;
    cursor: pointer;
}

.body-input{
    width: 100%;
    height: 100px;
    padding: 10px;
    margin-bottom: 25px;
    font-size: 16px;
    resize: none;
}

.close-box {
    font-weight: bold;
}

.box-close {
    position: absolute;
    top: 15px;
    right: 30px;
    background-color: var(--fail);
    padding: 7px;
    color: white;
    cursor: pointer;
}

.active-modal {
    visibility: visible;
    opacity: 1;
}

.active-box {
    transform: translateY(0);
}
.password{
    position: relative;
    display: flex;
}
.eye{
    position: absolute;
    right: 30px;
    bottom: 44px;
    cursor: pointer;
}
/* end modal */
/* start alert */
.alert{
    padding: 20px 10px;
    border-radius: 4px;
    color: white;
    position: fixed;
    bottom: 20px;
    right: 20px;
    text-align: center;
    font-size: 30px;
    font-weight: bold;
    transition: .5s;
    transform: translateX(400px);
    opacity: 0;
    z-index: 10;
}
.alert-active{
    opacity: 1;
    transform: translateX(0)
}
/* end alert */
/* start new post */
.new-post{
    width: 70px;
    height: 70px;
    border-radius: 50%;
    background-color: var(--secound-color);
    text-align: center;
    color: white;
    position: fixed;
    bottom: 20px;
    right: 20px;
    font-size: 50px;
    font-weight: bold;
    cursor: pointer;
    display: none;
}
.new-post-active{
    display: block;
}
/* end new post */
/* start detailsPost page */
#userName{
    display: block;
    font-size: 35px;
    font-weight: bold;
    padding: 20px;
}
.main_posts_post_users-comments{
    background-color: var(--secound-color);
    border-radius: 5px;
    padding: 10px;
}
.main_posts_post_users-comments_comment{
    margin-bottom: 10px;
    border-bottom: 1px solid black;
}
.main_posts_post_users-comments_comment:last-child{
    border-bottom: none;
}
.main_posts_post_users-comments_comment_header{
    margin-bottom: 5px;
    display: flex;
    align-items: center;
}
.main_posts_post_users-comments_comment_header img{
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: 2px solid var(--secound-color);
    margin-right: 5px;
}
.main_posts_post_users-comments_comment_body{
    padding-bottom: 10px;
}
.main_posts_post_sendComment{
    display: flex;
}
.main_posts_post_sendComment-hide{
    display: none;
}

.main_posts_post_sendComment input{
    flex: 1;
    padding: 10px;
    outline: none;
}
.main_posts_post_sendComment button{
    width: 15%;
    background-color: transparent;
    border: 1px solid blue;
    color: blue;
    cursor: pointer;
    font-size: 16px;
    font-weight: bold;
}
.main_posts_post_sendComment button:hover{
    background-color: blue;
    color: white;
}
/* end detailsPost page */
/* start profile */
.user-details {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    grid-auto-flow: row;
    grid-template-areas:
        "img email posts"
        "img name posts"
        "img name comments"
        "img userName comments";
    margin-top: 20px;
    background: var(--main-color);
    padding: 10px;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, .5) 0px 4px 4px -2px, rgba(0, 0, 0, 0.08) 0px 0px 4px 2px;
}

.user-details div{
    display: flex;
    font-size: 24px;
}

.user-details div span{
    font-weight: bold;
    color: var(--secound-color);
    font-size: 15px;
}

.user-details div h2{
    font-size: 35px;
    font-weight: normal;
}

.posts,
.comments{
    justify-content: center;
    align-items: end;
}

.name,
.userName,
.email{
    align-items: center;
}

.posts {
    grid-area: posts;
}

.comments {
    grid-area: comments;
}

.name {
    grid-area: name;
}

.userName {
    grid-area: userName;
}

.email {
    grid-area: email;
}

.img {
    grid-area: img;
}

.img img{
    width: 135px;
    height: 135px;
    border-radius: 50%;
    border: 2px solid var(--secound-color);
    margin-right: 10px;
}

#ownerPost{
    padding: 25px;
    font-size: 35px;
    margin-top: -20px;
    display: block;
}
/* end profile */
/* start loader */
.container-loader{
    position: fixed;
    margin: auto;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100px;
    height: 100px;
    background-color: var(--secound-color);
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.loader{
    position: fixed;
    width: 50px;
    padding: 8px;
    aspect-ratio: 1;
    border-radius: 50%;
    background: #25b09b;
    --_m: 
        conic-gradient(#0000 10%,#000),
        linear-gradient(#000 0 0) content-box;
    -webkit-mask: var(--_m);
            mask: var(--_m);
    -webkit-mask-composite: source-out;
            mask-composite: subtract;
    animation: l3 1s infinite linear;
}
@keyframes l3 {to{transform: rotate(1turn)}}
.loader-hide{
    display: none;
}
/* end loader */
/* start responsive */
@media (max-width:600px){
    .contanier{
        min-width: 80%;
    }
    .header_pages_logo{
        display: none;
    }
    .box{
        width: 80%;
    }
    .header_pages ul{
        gap: 4px;
        font-size: 13px;
    }
    .header_user span{
        font-size: 12px;
    }
}
/* end responsive */

